--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	            <form id="regForm">
-	                <h1 id="register">Survey Form</h1>
+	                <h1 id="register">Survey Form With Jenkins</h1>
 	                    <p> <input placeholder="First Name..." class="textBoxOnly" oninput="this.className = 'textBoxOnly'" name="fname"></p>
 	                    <p> <input placeholder="Last Name..." class="textBoxOnly" oninput="this.className = 'textBoxOnly'" name="lname"></p>
 	                    <p> <input placeholder="Email..." class="textBoxOnly" oninput="this.className = 'textBoxOnly'" name="email"></p>
